Fix. TeamNotFoundException handling via ExceptionHandler